--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ DB_PORT=5432
 NOCODB_API_BASE=http://your_nocodb_host:port/api/v1/db/data/v1/your_workspace
 NOCODB_API_TOKEN=your_nocodb_api_token
 NOCODB_SCHEMA=your_nocodb_schema
+
+# Cloudflare R2 Storage Configuration
+R2_ACCOUNT_ID=your_cloudflare_account_id
+R2_ACCESS_KEY_ID=your_r2_access_key_id
+R2_SECRET_ACCESS_KEY=your_r2_secret_access_key
+R2_BUCKET_NAME=your_r2_bucket_name
+R2_ENDPOINT_URL=https://your_account_id.r2.cloudflarestorage.com
